# wasmtime-test

./: Cargo.toml
custom-state/: Cargo.toml
custom-state/src/: main.rs
export-memory/: Cargo.toml
export-memory/src/: main.rs
hello-linker/: Cargo.toml
hello-linker/src/: main.rs
hello-wasi/: Cargo.toml
hello-wasi/src/: main.rs
hello-wasi/wasi/: Cargo.toml
hello-world/: Cargo.toml
hello-world/src/: main.rs
lib-async/: Cargo.toml
lib-hello/: Cargo.toml
lib-hello/lib-hello-example/: Cargo.toml
lib-hello/lib-hello-example/src/: lib.rs
lib-hello/src/: main.rs
lib-import/: Cargo.toml
lib-import-wasi/: Cargo.toml
lib-import-wasi/lib-import-wasi-example/: Cargo.toml
lib-import-wasi/lib-import-wasi-example/src/: lib.rs
lib-import-wasi/src/: main.rs
lib-import/lib-import-example/: Cargo.toml
lib-import/lib-import-example/src/: lib.rs
lib-import/src/: main.rs
wasi-async/: Cargo.toml
wasi-async/src/: main.rs
wasi-async/wasi/: Cargo.toml
wasi-async/wasi/src/: main.rs
wasi-import/: Cargo.toml
wasi-import/src/: main.rs
wasi-with-wbindgen/: Cargo.toml
wasi-with-wbindgen/src/: main.rs
wasi-with-wbindgen/wasi-with-wbindgen-example/: Cargo.toml
wasi-with-wbindgen/wasi-with-wbindgen-example/src/: lib.rs
