[package]
name = "wasi-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.8.0", features = ["full"] }
wasmtime = "0.38"
wasmtime-wasi = { version = "0.38", features = ["tokio"] }