[package]
name = "wasi-with-wbindgen-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluesql-core = { git = "https://github.com/gluesql/gluesql", branch = "main" }

[lib]
crate-type = ['cdylib']
